# RL

./: README.md
HIMLoco-for-Go2W/: .gitignore  README.md
HIMLoco-for-Go2W/legged_gym.egg-info/: PKG-INFO
HIMLoco-for-Go2W/legged_gym/envs/: __init__.py
HIMLoco-for-Go2W/legged_gym/scripts/: play.py
HIMLoco-for-Go2W/legged_gym/utils/: helpers.py  math.py  terrain.py
HIMLoco-for-Go2W/mujoco/: MUJOCO_LOG.TXT  check_gamepad.py  cmd_gamepad.py  cmd_keyboard.py  config.yaml  config_zgwt.yaml  config_zgwt_dance.yaml  pdandrl.py
HIMLoco-for-Go2W/rsl_rl/rsl_rl.egg-info/: PKG-INFO  SOURCES.txt
HIMLoco-for-Go2W/tools/: gen_zgwt_mjcf.py
unitree_rl_mjlab/: .gitignore  README.md  README_zh.md  setup.py
unitree_rl_mjlab/deploy/include/: LinearInterpolator.h  param.h  unitree_articulation.h  (+1 more)
unitree_rl_mjlab/deploy/robots/g1_23dof/: CMakeLists.txt  main.cpp
unitree_rl_mjlab/deploy/robots/g1_23dof/config/: config.yaml
unitree_rl_mjlab/deploy/robots/g1_23dof/config/policy/mimic/dance1_subject2/params/: deploy.yaml
unitree_rl_mjlab/deploy/robots/g1_23dof/config/policy/velocity/v0/params/: deploy.yaml
unitree_rl_mjlab/deploy/robots/g1_23dof/src/: State_Mimic.cpp
unitree_rl_mjlab/doc/: setup_en.md  setup_zh.md
unitree_rl_mjlab/scripts/: csv_to_npz.py  list_envs.py  play.py  train.py
unitree_rl_mjlab/simulate/: config.yaml
unitree_rl_mjlab/src/: __init__.py
zgwt/: CMakeLists.txt  package.xml
zgwt/config/: joint_names_ZJ_V3_URDF_V1_0.yaml
zgwt/launch/: display.launch  gazebo.launch
zgwt/meshes/: FAR_ABAD_LINK.STL  RAR_ABAD_LINK.STL
(+183 files in other folders)
